@@ -6,8 +6,8 @@ Feature: Headings
   Scenario: Getting the text of headings
     When I get the text for the "h1" element
     Then I should see "h1's are cool"
-#    When I get the text for the "h2" element
-#    Then I should see "h2's are cool"
+    When I get the text for the "h2" element
+    Then I should see "h2's are cool"
 #    When I get the text for the "h3" element
 #    Then I should see "h3's are cool"
 #    When I get the text for the "h4" element
@@ -20,6 +20,18 @@ Feature: Headings
   Scenario Outline: Locating h1s on the Page
     When I search for the heading1 by "<search_by>"
     Then I should see "h1's are cool"
+
+  Scenarios:
+    | search_by |
+    | id        |
+    | class     |
+    | name      |
+    | xpath     |
+    | index     |
+
+  Scenario Outline: Locating h2s on the Page
+    When I search for the heading2 by "<search_by>"
+    Then I should see "h2's are cool"
 
   Scenarios:
     | search_by |
