@@ -39,6 +39,7 @@
 
   </div>
   <h1>h1's are cool</h1>
+  <h2>h2's are cool</h2>
 
 </body>
 </html>
