@@ -3,8 +3,6 @@
     <title>Static Elements Page</title>
 </head>
   <body>
-    <h2>Static Elements Page</h2>
-
 
     <h3>Text Field</h3>
     <input id="text_field_id" name="text_field_name" class="text_field_class"
