@@ -20,6 +20,7 @@ class NestedElementsPage
   unordered_list(:nested_unordered_list) { |page| page.outer_div_element.unordered_list_element }
   list_item(:nested_list_item) { |page| page.nested_ordered_list_element.list_item_element }
   h1(:nested_h1) { |page| page.outer_div_element.h1_element}
+  h2(:nested_h2) { |page| page.outer_div_element.h2_element }
 end
 
 Given /^I am on the nested elements page$/ do
@@ -166,10 +167,17 @@ Then /^I should see the nested list items text should be "([^"]*)"$/ do |value|
 end
 
 When /^I search for a h1 located list in a div$/ do
-  puts @page.html
   @h1 = @page.nested_h1_element
 end
 
 Then /^I should see the nested h1s text should be "([^"]*)"$/ do |value|
   @h1.text.should == value
+end
+
+When /^I search for a h2 located list in a div$/ do
+  @h2 = @page.nested_h2_element
+end
+
+Then /^I should see the nested h2s text should be "([^"]*)"$/ do |value|
+  @h2.text.should == value
 end
