@@ -474,6 +474,25 @@ module PageObject
           Object::PageObject::Elements::Heading.new(element, :platform => :watir_webdriver)
         end  
 
+        #
+        # platform method to retrieve the text for a h2
+        # See PageObject::Accessors#h2
+        #
+        def h2_text_for(identifier)
+          identifier, frame_identifiers = parse_identifiers(identifier, Elements::Heading, 'h2')
+          @browser.instance_eval "#{nested_frames(frame_identifiers)}h2(identifier).text"          
+        end
+        
+        #
+        # platform method to retrieve the h2 element
+        # See PageObject::Accessors#h2
+        #
+        def h2_for(identifier)
+          identifier, frame_identifiers = parse_identifiers(identifier, Elements::Heading, 'h2')
+          element = @browser.instance_eval "#{nested_frames(frame_identifiers)}h2(identifier)"
+          Object::PageObject::Elements::Heading.new(element, :platform => :watir_webdriver)
+        end  
+
         private
     
         def parse_identifiers(identifier, element, tag_name=nil)
