@@ -22,6 +22,7 @@ class AccessorsTestPageObject
   unordered_list(:menu, :id => 'main_menu')
   ordered_list(:top_five, :id => 'top')
   h1(:heading1, :id => 'main_heading')
+  h2(:heading2, :id => 'main_heading')
 end
 
 class BlockPageObject
@@ -82,6 +83,9 @@ class BlockPageObject
   end
   h1 :heading1 do |element|
     "h1"
+  end
+  h2 :heading2 do |element|
+    "h2"
   end
 end
 
@@ -901,6 +905,47 @@ describe PageObject::Accessors do
       it "should retrieve the element from the page" do
         selenium_browser.should_receive(:find_element).and_return(selenium_browser)
         element = selenium_page_object.heading1_element
+        element.should be_instance_of PageObject::Elements::Heading
+      end
+    end
+  end
+  
+  describe "h2 accessors" do
+    context "when called on a page object" do
+      it "should generate accessor methods" do
+        watir_page_object.should respond_to(:heading2)
+        watir_page_object.should respond_to(:heading2_element)
+      end
+      
+      it "should call a block on the element method when present" do
+        block_page_object.heading2_element.should == "h2"
+      end
+    end
+    
+    context "watir implementation" do
+      it "should retrieve the text from the h2" do
+        watir_browser.should_receive(:h2).and_return(watir_browser)
+        watir_browser.should_receive(:text).and_return("value")
+        watir_page_object.heading2.should == "value"        
+      end
+      
+      it "should retrieve the element from the page" do
+        watir_browser.should_receive(:h2).and_return(watir_browser)
+        element = watir_page_object.heading2_element
+        element.should be_instance_of PageObject::Elements::Heading
+      end
+    end
+    
+    context "selenium implementation" do
+      it "should retrieve the text from the h2" do
+        selenium_browser.should_receive(:find_element).and_return(selenium_browser)
+        selenium_browser.should_receive(:text).and_return("value")
+        selenium_page_object.heading2.should == "value"
+      end
+      
+      it "should retrieve the element from the page" do
+        selenium_browser.should_receive(:find_element).and_return(selenium_browser)
+        element = selenium_page_object.heading2_element
         element.should be_instance_of PageObject::Elements::Heading
       end
     end
