@@ -6,6 +6,7 @@
   * Added #clear method for TextArea
   * Added support for Heading element
   * Added all of the h1 locators
+  * Added all of the h2 locators
   * Updated to use selenium-webdriver 2.6.0
 
 === Version 0.3.1 / 2011-09-08
